kustomize/base/obdemo-rcs-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obdemo-rcs-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obdemo-rcs-ui
  template:
    metadata:
      labels:
        app: obdemo-rcs-ui
    spec:
      containers:
      - image: obdemo-rcs-ui
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: obdemo-rcs-ui
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
          limits:
            memory: "100Mi"
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
