kustomize/base/obdemo-rcs-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obdemo-rcs-ui
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: obdemo-rcs-ui
  type: ClusterIP
